--- a/19_feb tops/task/02_table.html
+++ b/19_feb tops/task/02_table.html
@@ -35,19 +35,19 @@
             <tr>
                 <th>1</th>
                 <td> Of Mice and Men </td>
-                <td>Book</td>
+                <td align="center">Book</td>
                 <td>10.00 &#8364;</td>
             </tr>
             <tr>
                 <th>2</th>
                 <td>Les Miserable</td>
-                <td>Book</td>
+                <td align="center">Book</td>
                 <td>12.00 &#8364;</td>
             </tr>
             <tr>
                 <th>3</th>
                 <td>Game of Thorones - S01</td>
-                <td>DVD</td>
+                <td align="center">DVD</td>
                 <td>50.00 &#8364;</td>
             </tr>
             <tr>
