--- a/19_feb tops/task/03_Table.html
+++ b/19_feb tops/task/03_Table.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <table border="1" cellspacing="0" cellpandding="1" style="height: 500px; width: 800px;">
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <th rowspan="2">Days</th>
             <th colspan="6">Time</th>
         </tr>
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <td align="center">8:00</td>
             <td align="center">9:00</td>
             <td align="center">10:00</td>
@@ -19,40 +19,40 @@
             <td align="center">11:30</td>
             <td align="center">12:30</td>
         </tr>
-        <tr>
+        <tr >
             <th>Mon</th>
-            <td>Course 1</td>
-            <td>Course 2</td>
-            <td>Course 3</td>
+            <td align="center" style="font: 1em sans-serif;">Course 1</td>
+            <td align="center" style="font: 1em sans-serif;">Course 2</td>
+            <td align="center" style="font: 1em sans-serif;">Course 3</td>
             <td rowspan="5" align="center"> <b>B <br>R <br>E <br>A <br>K</b></td>
-            <td>Course 5</td>
+            <td align="center " style="font: 1em sans-serif;">Course 5</td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <th>Tue</th>
             <td colspan="2"></td>
-            <td>Course 2</td>
-            <td>Course 4</td>
-            <td>Course 1</td>
+            <td align="center">Course 2</td>
+            <td align="center">Course 4</td>
+            <td align="center">Course 1</td>
         </tr>
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <th>Wed</th>
-            <td>Course 3</td>
+            <td align="center">Course 3</td>
             <td colspan="2"></td>
-            <td>Course 2</td>
+            <td align="center">Course 2</td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <th>Thr</th>
-            <td rowspan="2">Course 4</td>
-            <td>Course 2</td>
-            <td> Course 3</td>
+            <td rowspan="2" align="center">Course 4</td>
+            <td align="center ">Course 2</td>
+            <td align="center"> Course 3</td>
             <td colspan="2" rowspan="2" align="center">Thesis</td>
         </tr>
-        <tr>
+        <tr style="font: 1em sans-serif;">
             <th>Fri</th>
             <td></td>
-            <td>Course 1</td>
+            <td align="center" >Course 1</td>
 
         </tr>
     </table>
