--- a/11_march_tops/task/02_form.html
+++ b/11_march_tops/task/02_form.html
@@ -10,80 +10,87 @@
 
 <body>
 
-    
-        <form >
-            <h1 align="center"> Student Registration Form Using Table in HTML</h1>
-            <hr>
-            <div align="center">
+
+    <form name="firstform" onclick="Validtion()">
+        <h1 align="center"> Student Registration Form Using Table in HTML</h1>
+        <hr>
+        <div align="center">
 
             <fieldset style="background-color: rgb(177, 235, 239); height: 125%; width: 60%;">
-                <div >
-            <table  cellspacing="0px" cellpadding="5px" align="center" style="margin-top: -10%;">
-                <tr>
-                   
-                    <td align="left">First Name:</td>
-                    <td> <input type="First Name" placeholder="Enter your First name" maxlength="50" value="Ghanendra">
-                   (Max 50 Characters Allowed)</td> <br><br> 
-                </tr>
-                <tr>
-                    <td align="left">Last Name:</td>
-                    <td><input type="text" placeholder="Enter your Last name" maxlength="50" value="Yadav">
-                    &nbsp;(Max 50 Characters Allowed) </td><br><br>
-                </tr>
-                <tr>
-                    <td align="left">Email:</td>
-                    <td><input type="email" placeholder="Enter your email" value="Yghanendra@gmail.com"></td><br><br>
-                </tr>
-                <tr>
-                    <td align="left">Mobile Number:</td>
-                    <td> <input type="text" placeholder="Enter your MobileNumber" value="7842xxxxxx" maxlength="10">
-                    &nbsp;(10 Digits Allowed) </td><br><br>
-                </tr>
-                <tr>
-                    <td align="left"><b>Gender:</b></td>
-                  <td>  <input type="radio" name="Gender" value="Male">male 
-                    <input type="radio" name="Gender" value="Female">Female </td></tr>
-                    <tr> 
-                        <td align="left">Date of birth (DOB)</td>
-                        <td><input type="date"></td>
-                    </tr>
+                <div>
+                    <table cellspacing="0px" cellpadding="5px" align="center" style="margin-top: -10%;">
+                        <tr>
+
+                            <td align="left">First Name:</td>
+                            <td> <input id="fn" name="fn" type="First Name" placeholder="Enter your First name"> </td> <br><br>
+                        </tr>
+                        <tr>
+                            <td align="left">Last Name:</td>
+                            <td><input id="ln" name="ln" type="text" placeholder="Enter your Last name"></td><br><br>
+                        </tr>
+                        <tr>
+                            <td align="left">Email:</td>
+                            <td><input id="email" name="Email" type="email" placeholder="Enter your email"></td><br><br>
+                        </tr>
+                        <tr>
+                            <td align="left">Mobile Number:</td>
+                            <td> <input type="text" placeholder="Enter your MobileNumber" value="7842xxxxxx"
+                                    maxlength="10">
+                                &nbsp;(10 Digits Allowed) </td><br><br>
+                        </tr>
+                        <tr>
+                            <td align="left"><b>Gender:</b></td>
+                            <td> <input type="radio" name="Gender" value="Male">male
+                                <input type="radio" name="Gender" value="Female">Female
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="left">Date of birth (DOB)</td>
+                            <td><input type="date"></td>
+                        </tr>
+                        <tr>
+                            <td align="left">Address:</td>
+                            <td><textarea name="Address" id="Address" cols="30" rows="10"></textarea></td>
+                        </tr>
+                        <tr>
+                            <td align="left">City:</td>
+                            <td><input type="text" placeholder="Enter your City" value="Bangalore"
+                                    maxlength="50">&nbsp;&nbsp;(Max 50 Characters Allowed)</td>
+                        </tr>
+                </div>
+                <div style="background-color: rgb(219, 137, 201);">
                     <tr>
-                        <td align="left">Address:</td>
-                        <td><textarea name="Address" id="Address" cols="30" rows="10"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td align="left">City:</td>
-                        <td><input type="text" placeholder="Enter your City" value="Bangalore" maxlength="50">&nbsp;&nbsp;(Max 50 Characters Allowed)</td>
-                    </tr></div>
-                    <div style="background-color: rgb(219, 137, 201);">
-                     <tr>
                         <td align="left">Pin code:</td>
-                        <td><input type="text" placeholder="Enter your pin code" value="560068" maxlength="6">&nbsp;&nbsp;(Max 6 Numbers Allowed)</td>
-                     </tr>   
-                     <tr>
+                        <td><input type="text" placeholder="Enter your pin code" value="560068"
+                                maxlength="6">&nbsp;&nbsp;(Max 6 Numbers Allowed)</td>
+                    </tr>
+                    <tr>
                         <td align="left">State:</td>
-                        <td><input type="text" placeholder="Enter your State" value="karnataka"  maxlength="50">&nbsp;&nbsp;(Max 50 Characters Allowed)</td>
-                     </tr>
-                     <tr>
+                        <td><input type="text" placeholder="Enter your State" value="karnataka"
+                                maxlength="50">&nbsp;&nbsp;(Max 50 Characters Allowed)</td>
+                    </tr>
+                    <tr>
                         <td align="left">Country:</td>
                         <td><input type="text" placeholder="India"></td>
-                     </tr>
-                     <tr>
+                    </tr>
+                    <tr>
                         <td align="left">hobbies:</td>
                         <td><input type="checkbox" name="Drawing">Drawing
                             <input type="checkbox" name="Singing">Singing
                             <input type="checkbox" name="Dancing">Dancing
-                            <input type="checkbox" name="Sketching">Sketching <br> 
+                            <input type="checkbox" name="Sketching">Sketching <br>
                             <input type="checkbox" name="others">others
-                            <input type="text" placeholder="" maxlength="50">(Max 50 Characters Allowed)</td>
-                     </tr>
+                            <input type="text" placeholder="" maxlength="50">(Max 50 Characters Allowed)
+                        </td>
+                    </tr>
                     <tr>
                         <td align="left">Qualification:</td>
                         <td><input type="checkbox"> High School(10th) <br>
                             <input type="checkbox"> higher School(12th) <br>
                             <input type="checkbox"> Graduation(bachelors) <br>
                             <input type="checkbox">Post Graduation(Masters) <br>
-                            <input type="checkbox">Phd </td>
+                            <input type="checkbox">Phd
+                        </td>
                     </tr>
                     <tr>
                         <td align="left">Course applied for:</td>
@@ -97,13 +104,40 @@
                             <input type="checkbox">MA(Master of Arts) <br><br>
                             <input type="submit">
                             <input type="reset">
-                            </td>
+                        </td>
                     </tr>
                 </div>
-            </table>
+                </table>
         </div>
         </fieldset>
-            </form>
-    </body>
+    </form>
+</body>
+<script>
+    function Validtion() {
+        var fn=document.forms["firstform"]["fn"].value;
+        if(fn=="" || fn==null){
+            // document.getElementById('fn').innerHTML="Please fill Out the User first name";
+            alert("Please fill Out the User first name");
+            return false ;
+        }
+
+        var alpha=/^[A-Za-z]+$/;
+        if(!alpha.test(fn)){
+            alert("Please fill Only alpha User First name ");
+            return false;
+        }
+        var fn=document.forms["firstform"]["ln"].value;
+        if(ln=="" || ln==null){
+            alert("Please fill Out the user last name ");
+            return false; 
+        }
+        var alpha=/^[a-zA-Z]+$/;
+        if (!alpha.test(ln)) {
+            alert("Please fill alpha user last name "); 
+            return false;
+        }
+        var
+    }
+</script>
 
 </html>
